--- a/src/html/datastatistics.html
+++ b/src/html/datastatistics.html
@@ -15,7 +15,10 @@
   <link rel="stylesheet" href="../css/bootstrap.css" id="bscss">
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
+  <link rel="stylesheet" href="../css/wj.css">
   <!-- endbuild -->
+
+
 
 
 
@@ -62,6 +65,8 @@
       </nav>
     </header>
     <!-- endbuild -->
+
+
 
 
 
@@ -166,6 +171,8 @@
 
 
 
+
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -174,19 +181,21 @@
         </div>
         <div class="row">
           <div class="col-lg-4">
-            <div class="panel widget bg-green">
-              <div class="row row-table">
-                <div class="col-xs-4 text-center bg-green-dark pv-lg">
-                  <em class="icon-people fa-3x"></em>
-                </div>
-                <div class="col-xs-8 pv-lg">
-                  <div class="h2 mt0">66
-                    <small>人</small>
+            <a class="nodecation" href="./datastatistics_all.html">
+              <div class="panel widget bg-green">
+                <div class="row row-table">
+                  <div class="col-xs-4 text-center bg-green-dark pv-lg">
+                    <em class="icon-people fa-3x"></em>
                   </div>
-                  <div class="text-uppercase">全部有效学员</div>
+                  <div class="col-xs-8 pv-lg">
+                    <div class="h2 mt0">66
+                      <small>人</small>
+                    </div>
+                    <div class="text-uppercase">全部有效学员</div>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </div>
           <div class="col-lg-4">
             <div class="panel widget bg-warning">
@@ -222,7 +231,7 @@
               <div class="panel widget bg-purple">
                 <div class="row row-table">
                   <div class="col-xs-4 text-center bg-purple-dark pv-lg">
-                    <em class="icon-user-follow fa-3x"></em>
+                    <em class="icon-directions fa-3x"></em>
                   </div>
                   <div class="col-xs-8 pv-lg">
                     <div class="h2 mt0">100
@@ -237,7 +246,7 @@
                 <div class="panel widget bg-danger">
                   <div class="row row-table">
                     <div class="col-xs-4 text-center bg-danger-dark pv-lg">
-                      <em class="icon-user-follow fa-3x"></em>
+                      <em class="icon-map fa-3x"></em>
                     </div>
                     <div class="col-xs-8 pv-lg">
                       <div class="h2 mt0">100
@@ -320,6 +329,120 @@
                         <em class="icon-user-unfollow fa-2x"></em>
                       </div>
                       <h3 class="mt0">33</h3>
+                      <p class="text-muted">续费学员</p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-3 col-sm-6">
+                  <div class="panel widget">
+                    <div class="panel-body text-center">
+                      <div class="text-right text-muted">
+                        <em class="icon-clock fa-2x"></em>
+                      </div>
+                      <h3 class="mt0">888天</h3>
+                      <p class="text-muted">总续费时长</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                  <div class="panel widget">
+                    <div class="panel-body text-center">
+                      <div class="text-right text-muted">
+                        <em class="fa fa-star-half-o fa-2x"></em>
+                      </div>
+                      <h3 class="mt0">12</h3>
+                      <p class="text-muted">流失学员</p>
+                      <p class="text-danger">30天前过期且未续费的学员</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-3">
+                  <div class="panel widget">
+                    <div class="panel-body text-center">
+                      <div class="text-right text-muted">
+                        <em class="fa fa-star fa-2x"></em>
+                      </div>
+                      <h3 class="mt0">388（100%）</h3>
+                      <p class="text-muted">体验转化</p>
+                      <p class="text-danger">体验账号今日完成续费</p>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-12">
+            <div id="" class="panel panel-primary">
+              <div class="panel-heading">今日学况 </div>
+              <div class="panel-body">
+                <div class="col-lg-3 col-sm-6">
+                  <div class="panel widget">
+                    <div class="panel-body text-center">
+                      <div class="text-right text-muted">
+                        <em class="icon-user-unfollow fa-2x"></em>
+                      </div>
+                      <h3 class="mt0">33</h3>
+                      <p class="text-muted">今日学习人数</p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-3 col-sm-6">
+                  <div class="panel widget">
+                    <div class="panel-body text-center">
+                      <div class="text-right text-muted">
+                        <em class="icon-clock fa-2x"></em>
+                      </div>
+                      <h3 class="mt0">03:30:12</h3>
+                      <p class="text-muted">人均有效学习时长</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                  <div class="panel widget">
+                    <div class="panel-body text-center">
+                      <div class="text-right text-muted">
+                        <em class="fa fa-star-half-o fa-2x"></em>
+                      </div>
+                      <h3 class="mt0">12</h3>
+                      <p class="text-muted">人均学币获取</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-3">
+                  <div class="panel widget">
+                    <div class="panel-body text-center">
+                      <div class="text-right text-muted">
+                        <em class="fa fa-star fa-2x"></em>
+                      </div>
+                      <h3 class="mt0">388</h3>
+                      <p class="text-muted">总学币获取</p>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-12">
+            <div id="" class="panel panel-primary">
+              <div class="panel-heading">学况查询 </div>
+              <div class="panel-body">
+                <div class="col-lg-3 col-sm-6">
+                  <div class="panel widget">
+                    <div class="panel-body text-center">
+                      <div class="text-right text-muted">
+                        <em class="icon-user-unfollow fa-2x"></em>
+                      </div>
+                      <h3 class="mt0">33</h3>
                       <p class="text-muted">未学人数</p>
                     </div>
                   </div>
@@ -381,6 +504,8 @@
 
 
 
+
+
   </div>
 
   <!-- build:js -->
@@ -394,6 +519,8 @@
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
+
 
 
 
