--- a/src/html/salesdata.html
+++ b/src/html/salesdata.html
@@ -15,7 +15,9 @@
   <link rel="stylesheet" href="../css/bootstrap.css" id="bscss">
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
+  <link rel="stylesheet" href="../css/wj.css">
   <!-- endbuild -->
+
 
 
 
@@ -63,6 +65,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -162,6 +165,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -301,6 +305,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -325,6 +330,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -338,6 +344,7 @@
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
