--- a/src/html/salesdata_info.html
+++ b/src/html/salesdata_info.html
@@ -15,7 +15,9 @@
   <link rel="stylesheet" href="../css/bootstrap.css" id="bscss">
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
+  <link rel="stylesheet" href="../css/wj.css">
   <!-- endbuild -->
+
 
 
 
@@ -62,6 +64,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -160,6 +163,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -301,6 +305,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -324,6 +329,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -337,6 +343,7 @@
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
