--- a/src/html/studentmanagement_unallocated.html
+++ b/src/html/studentmanagement_unallocated.html
@@ -15,7 +15,9 @@
   <link rel="stylesheet" href="../css/bootstrap.css" id="bscss">
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
+  <link rel="stylesheet" href="../css/wj.css">
   <!-- endbuild -->
+
 
 
 
@@ -62,6 +64,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -160,6 +163,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -185,6 +189,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -198,6 +203,7 @@
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
