--- a/src/html/teachermanagement_sales_info.html
+++ b/src/html/teachermanagement_sales_info.html
@@ -15,7 +15,9 @@
   <link rel="stylesheet" href="../css/bootstrap.css" id="bscss">
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
+  <link rel="stylesheet" href="../css/wj.css">
   <!-- endbuild -->
+
 
 
 
@@ -61,6 +63,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -157,6 +160,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -186,6 +190,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -199,6 +204,7 @@
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
