--- a/src/html/studyreport_overall_experiencelist.html
+++ b/src/html/studyreport_overall_experiencelist.html
@@ -210,6 +210,7 @@
         <div class="row">
           <div class="col-xs-12">
               <!-- START table-responsive-->
+            <div class="panel-default">
               <div class="panel-heading">
                 <div class="table-responsive">
                   <table class="table table-bordered table-hover dataTable">
