--- a/src/html/datastatistics.html
+++ b/src/html/datastatistics.html
@@ -13,9 +13,13 @@
   <link rel="stylesheet" href="../js/vendor/animate.css/animate.min.css">
   <link rel="stylesheet" href="../js/vendor/whirl/dist/whirl.css">
   <link rel="stylesheet" href="../css/bootstrap.css" id="bscss">
+  <link rel="stylesheet" href="../js/vendor/datatable-bootstrap/css/dataTables.bootstrap.css">
+  <link rel="stylesheet" href="../js/vendor/sweetalert/dist/sweetalert.css">
+  <link rel="stylesheet" href="../js/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
+
 
 
 
@@ -62,6 +66,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -211,6 +216,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -402,6 +408,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -413,8 +420,12 @@
   <script src="../js/vendor/jquery.easing/js/jquery.easing.js"></script>
   <script src="../js/vendor/animo.js/animo.js"></script>
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
+  <script src="../js/vendor/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="../js/vendor/moment/min/moment-with-locales.min.js"></script>
+  <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
