--- a/src/html/mallmanagement_commodity.html
+++ b/src/html/mallmanagement_commodity.html
@@ -13,9 +13,15 @@
   <link rel="stylesheet" href="../js/vendor/animate.css/animate.min.css">
   <link rel="stylesheet" href="../js/vendor/whirl/dist/whirl.css">
   <link rel="stylesheet" href="../css/bootstrap.css" id="bscss">
+  <link rel="stylesheet" href="../js/vendor/datatable-bootstrap/css/dataTables.bootstrap.css">
+  <link rel="stylesheet" href="../js/vendor/sweetalert/dist/sweetalert.css">
+  <link rel="stylesheet" href="../js/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
+  <!-- 上传 -->
+  <link rel="stylesheet" href="../js/vendor/blueimp-file-upload/css/jquery.fileupload.css">
+  <link rel="stylesheet" href="../css/main_xc.css">
 
 
 </head>
@@ -48,7 +54,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span><i class="fa fa-user"></i>admin</span><span>|</span>
+              <span>
+                <i class="fa fa-user"></i>admin</span>
+              <span>|</span>
             </li>
             <li>
               <a href="#">
@@ -60,6 +68,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -207,6 +216,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -215,18 +225,156 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            这里是内容
+            <!-- START panel-->
+            <div class="panel-default">
+              <div class="panel-heading">
+                <form class="text-right form-lineH">
+                  <div class="row">
+                    <div class="col-sm-1">
+                      <button type="button" class="btn btn-primary jq-edit">新建商品</button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+              <!-- START table-responsive-->
+              <div class="panel-heading">
+                <div class="table-responsive">
+                  <table id="table-ext-1" class="table table-bordered table-hover dataTable">
+                    <col style="width: 5%" />
+                    <col style="width: 20%" />
+                    <col style="width: 15%" />
+                    <col style="width: 15%" />
+                    <col style="width: 5%" />
+                    <col style="width: 5%" />
+                    <col style="width: 10%" />
+                    <col style="width: 25%" />
+                    <thead>
+                      <tr>
+                        <th>当前序号</th>
+                        <th>商品名称</th>
+                        <th>排序值（数字越大越靠前）</th>
+                        <th>图片</th>
+                        <th>学币</th>
+                        <th>库存</th>
+                        <th>上架情况</th>
+                        <th>操作</th>
+                      </tr>
+                    </thead>
+                    <tbody id="designerlist">
+                      <tr>
+                        <td>1</td>
+                        <td>商品名称</td>
+                        <td><input type="text" class="form-control" value="2"></td>
+                        <td>
+                          <div class="media">
+                            <img src="../img/user/02.jpg" alt="Image" class="img-responsive">
+                          </div>
+                        </td>
+                        <td>500</td>
+                        <td>500</td>
+                        <td>
+                          <label class="switch switch-lg">
+                            <input type="checkbox" checked="checked">
+                            <span></span>
+                          </label>
+                        </td>
+                        <td>
+                          <a class="btn btn-primary jq-edit" href="javascript:;">修改</a>
+                          <a class="btn btn-danger jq-del" href="javascript:;">删除</a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>2</td>
+                        <td>商品名称</td>
+                        <td><input type="text" class="form-control" value="3"></td>
+                        <td>
+                          <div class="media">
+                            <img src="../img/user/02.jpg" alt="Image" class="img-responsive">
+                          </div>
+                        </td>
+                        <td>500</td>
+                        <td>500</td>
+                        <td>
+                          <label class="switch switch-lg">
+                            <input type="checkbox" checked="checked">
+                            <span></span>
+                          </label>
+                        </td>
+                        <td>
+                          <a class="btn btn-primary jq-edit" href="javascript:;">修改</a>
+                          <a class="btn btn-danger jq-del" href="javascript:;">删除</a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>3</td>
+                        <td>商品名称</td>
+                        <td><input type="text" class="form-control" value="4"></td>
+                        <td>
+                          <div class="media">
+                            <img src="../img/user/02.jpg" alt="Image" class="img-responsive">
+                          </div>
+                        </td>
+                        <td>500</td>
+                        <td>500</td>
+                        <td>
+                          <label class="switch switch-lg">
+                            <input type="checkbox" checked="checked">
+                            <span></span>
+                          </label>
+                        </td>
+                        <td>
+                          <a class="btn btn-primary jq-edit" href="javascript:;">修改</a>
+                          <a class="btn btn-danger jq-del" href="javascript:;">删除</a>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+
+                <!-- build:pages -->
+                <!-- 分页 -->
+                <div class="row">
+                  <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
+                    <ul class="pagination pagination-sm m0">
+                      <li>
+                        <a href="#" aria-label="Previous">
+                          <span aria-hidden="true">«</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">1</a>
+                      </li>
+                      <li>
+                        <a href="#">2</a>
+                      </li>
+                      <li class="active">
+                        <a href="#">3</a>
+                      </li>
+                      <li>
+                        <a href="#" aria-label="Next">
+                          <span aria-hidden="true">»</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <!-- endbuild -->
+
+
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <!-- 主要内容END -->
-    
+
     <!-- build:foot -->
     <footer>
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -241,8 +389,14 @@
   <script src="../js/vendor/jquery.easing/js/jquery.easing.js"></script>
   <script src="../js/vendor/animo.js/animo.js"></script>
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
+  <script src="../js/vendor/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="../js/vendor/moment/min/moment-with-locales.min.js"></script>
+  <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+  <script src="../js/vendor/blueimp-file-upload/js/jquery.fileupload.js"></script>
+  <script src="../js/vendor/blueimp-file-upload/js/jquery.fileupload-ui.js"></script>
+  <script src="../js/mallmanagement.js"></script>
 
 
 
