--- a/src/html/exchangemanagement_has.html
+++ b/src/html/exchangemanagement_has.html
@@ -224,8 +224,8 @@
                   <table class="table table-bordered table-hover dataTable">
                     <thead>
                       <tr>
-                        <th class="sorting">下单时间</th>
-                        <th class="sorting">完成兑换时间</th>
+                        <th>下单时间</th>
+                        <th>完成兑换时间</th>
                         <th>兑换学员</th>
                         <th>商品名称</th>
                         <th>商品价格</th>
