--- a/src/html/studyreport_overall_threedaysnotstudy.html
+++ b/src/html/studyreport_overall_threedaysnotstudy.html
@@ -227,10 +227,10 @@
                       <tr>
                         <th>学生手机</th>
                         <th>姓名</th>
-                        <th class="sorting">今日学习效率（有效时长/在线时长）</th>
-                        <th class="sorting">上次学习</th>
-                        <th class="sorting">学生总积分</th>
-                        <th class="sorting">总学习天数</th>
+                        <th>今日学习效率（有效时长/在线时长）</th>
+                        <th>上次学习</th>
+                        <th>学生总积分</th>
+                        <th>总学习天数</th>
                       </tr>
                     </thead>
                     <tbody id="designerlist">
