--- a/src/html/studentmanagement_recharge.html
+++ b/src/html/studentmanagement_recharge.html
@@ -257,8 +257,8 @@
                         <th>学生手机</th>
                         <th>姓名</th>
                         <th>昵称</th>
-                        <th class="sorting">有效期</th>
-                        <th class="sorting">到期日期</th>
+                        <th>有效期</th>
+                        <th>到期日期</th>
                         <th>班级</th>
                         <th>当前学员组</th>
                         <th>操作</th>
