--- a/src/html/mallmanagement_order_has.html
+++ b/src/html/mallmanagement_order_has.html
@@ -224,8 +224,8 @@
         <div class="row">
           <div class="col-xs-12">
             <div class="mb-20">
-              <a class="wj-a wj-a-active" href="./mallmanagement_order.html">未兑换</a>
-              <a class="wj-a" href="./mallmanagement_order_has.html">已兑换</a>
+              <a class="wj-a" href="./mallmanagement_order.html">未兑换</a>
+              <a class="wj-a wj-a-active" href="./mallmanagement_order_has.html">已兑换</a>
             </div>
             <!-- START panel-->
             <div class="panel-default">
@@ -252,92 +252,44 @@
               <div class="panel-heading">
                 <div class="table-responsive">
                   <table id="table-ext-1" class="table table-bordered table-hover dataTable">
-                    <col width="3%" />
                     <col width="10%" />
                     <col width="20%" />
                     <col width="20%" />
-                    <col width="5%" />
+                    <col width="10%" />
                     <col width="30%" />
-                    <col width="12%" />
                     <thead>
                       <tr>
-                        <th data-check-all="">
-                          <div data-toggle="tooltip" data-title="全选" class="checkbox c-checkbox" data-original-title="" title="">
-                            <label>
-                              <input class="jq-allcheck" type="checkbox">
-                              <span class="fa fa-check"></span>
-                            </label>
-                          </div>
-                        </th>
                         <th>下单时间</th>
                         <th>兑换教师</th>
                         <th>商品名称</th>
                         <th>商品价格</th>
                         <th>收货地址</th>
-                        <th>操作</th>
                       </tr>
                     </thead>
                     <tbody id="designerlist">
                       <tr>
-                        <td>
-                          <div class="checkbox c-checkbox">
-                            <label>
-                              <input type="checkbox">
-                              <span class="fa fa-check"></span>
-                            </label>
-                          </div>
-                        </td>
                         <td>2018-01-01 22:22:22</td>
                         <td>学校名+教师姓名</td>
                         <td>商品名称商品名称</td>
                         <td>500</td>
                         <td>XX市XX区XXXXXXXXXXXXXX，XXX收，18000000000</td>
-                        <td>
-                          <a class="btn btn-primary jq-send" href="javascript:;">发货</a>
-                          <a class="btn btn-primary jq-cancel" href="javascript:;">取消</a>
-                        </td>
                       </tr>
                       <tr>
-                        <td>
-                          <div class="checkbox c-checkbox">
-                            <label>
-                              <input type="checkbox">
-                              <span class="fa fa-check"></span>
-                            </label>
-                          </div>
-                        </td>
                         <td>2018-01-01 22:22:22</td>
                         <td>学校名+教师姓名</td>
                         <td>商品名称商品名称</td>
                         <td>500</td>
                         <td>XX市XX区XXXXXXXXXXXXXX，XXX收，18000000000</td>
-                        <td>
-                          <a class="btn btn-primary jq-send" href="javascript:;">发货</a>
-                          <a class="btn btn-primary jq-cancel" href="javascript:;">取消</a>
-                        </td>
                       </tr>
                       <tr>
-                        <td>
-                          <div class="checkbox c-checkbox">
-                            <label>
-                              <input type="checkbox">
-                              <span class="fa fa-check"></span>
-                            </label>
-                          </div>
-                        </td>
                         <td>2018-01-01 22:22:22</td>
                         <td>学校名+教师姓名</td>
                         <td>商品名称商品名称</td>
                         <td>500</td>
                         <td>XX市XX区XXXXXXXXXXXXXX，XXX收，18000000000</td>
-                        <td>
-                          <a class="btn btn-primary jq-send" href="javascript:;">发货</a>
-                          <a class="btn btn-primary jq-cancel" href="javascript:;">取消</a>
-                        </td>
                       </tr>
                     </tbody>
                   </table>
-                  <a class="btn btn-primary jq-cancel" href="javascript:;">批量取消</a>
                 </div>
 
                 <!-- build:pages -->
