--- a/src/html/mallmanagement_exchange.html
+++ b/src/html/mallmanagement_exchange.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
-
+  <link rel="stylesheet" href="../css/wj.css">
 
 
 </head>
@@ -49,7 +49,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span><i class="fa fa-user"></i>admin</span><span>|</span>
+              <span>
+                <i class="fa fa-user"></i>admin</span>
+              <span>|</span>
             </li>
             <li>
               <a href="#">
@@ -165,13 +167,158 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            这里是内容
+            <div class="mb-20">
+              <a class="wj-a wj-a-active" href="./mallmanagement_order.html">未兑换</a>
+              <a class="wj-a" href="./mallmanagement_order_has.html">已兑换</a>
+            </div>
+            <!-- START panel-->
+            <div class="panel-default">
+              <div class="panel-heading">
+                <form class="text-right form-lineH">
+                  <div class="row">
+                    <div class="form-group col-sm-3">
+                      <label class="col-sm-4">选择学校：</label>
+                      <div class="col-sm-8">
+                        <select name="" id="" class="form-control">
+                          <option value="">全部</option>
+                          <option value="1">学校1</option>
+                          <option value="2">学校2</option>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="col-sm-1">
+                      <button type="button" class="btn btn-primary">搜索</button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+              <!-- START table-responsive-->
+              <div class="panel-heading">
+                <div class="table-responsive">
+                  <table id="table-ext-1" class="table table-bordered table-hover dataTable">
+                    <col width="3%" />
+                    <col width="10%" />
+                    <col width="20%" />
+                    <col width="20%" />
+                    <col width="5%" />
+                    <col width="30%" />
+                    <col width="12%" />
+                    <thead>
+                      <tr>
+                        <th data-check-all="">
+                          <div data-toggle="tooltip" data-title="全选" class="checkbox c-checkbox" data-original-title="" title="">
+                            <label>
+                              <input class="jq-allcheck" type="checkbox">
+                              <span class="fa fa-check"></span>
+                            </label>
+                          </div>
+                        </th>
+                        <th>下单时间</th>
+                        <th>兑换学员</th>
+                        <th>商品名称</th>
+                        <th>商品价格</th>
+                        <th>操作</th>
+                      </tr>
+                    </thead>
+                    <tbody id="designerlist">
+                      <tr>
+                        <td>
+                          <div class="checkbox c-checkbox">
+                            <label>
+                              <input type="checkbox">
+                              <span class="fa fa-check"></span>
+                            </label>
+                          </div>
+                        </td>
+                        <td>2018-01-01 22:22:22</td>
+                        <td>学员名+学员手机</td>
+                        <td>商品名称商品名称</td>
+                        <td>500</td>
+                        <td>
+                          <a class="btn btn-primary jq-send" href="javascript:;">兑换</a>
+                          <a class="btn btn-primary jq-cancel" href="javascript:;">取消</a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="checkbox c-checkbox">
+                            <label>
+                              <input type="checkbox">
+                              <span class="fa fa-check"></span>
+                            </label>
+                          </div>
+                        </td>
+                        <td>2018-01-01 22:22:22</td>
+                        <td>学员名+学员手机</td>
+                        <td>商品名称商品名称</td>
+                        <td>500</td>
+                        <td>
+                          <a class="btn btn-primary jq-send" href="javascript:;">兑换</a>
+                          <a class="btn btn-primary jq-cancel" href="javascript:;">取消</a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="checkbox c-checkbox">
+                            <label>
+                              <input type="checkbox">
+                              <span class="fa fa-check"></span>
+                            </label>
+                          </div>
+                        </td>
+                        <td>2018-01-01 22:22:22</td>
+                        <td>学员名+学员手机</td>
+                        <td>商品名称商品名称</td>
+                        <td>500</td>
+                        <td>
+                          <a class="btn btn-primary jq-send" href="javascript:;">兑换</a>
+                          <a class="btn btn-primary jq-cancel" href="javascript:;">取消</a>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <a class="btn btn-primary jq-send" href="javascript:;">批量兑换</a>
+                  <a class="btn btn-primary jq-cancel" href="javascript:;">批量取消</a>
+                </div>
+
+                <!-- build:pages -->
+                <!-- 分页 -->
+                <div class="row">
+                  <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
+                    <ul class="pagination pagination-sm m0">
+                      <li>
+                        <a href="#" aria-label="Previous">
+                          <span aria-hidden="true">«</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">1</a>
+                      </li>
+                      <li>
+                        <a href="#">2</a>
+                      </li>
+                      <li class="active">
+                        <a href="#">3</a>
+                      </li>
+                      <li>
+                        <a href="#" aria-label="Next">
+                          <span aria-hidden="true">»</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <!-- endbuild -->
+
+
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <!-- 主要内容END -->
-    
+
     <!-- build:foot -->
     <footer>
       <span>&copy; 2018 - 智厢逢</span>
@@ -194,7 +341,7 @@
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
-
+  <script src="../js/mallmanagement.js"></script>
 
 
 
