--- a/src/html/mallmanagement_commodity.html
+++ b/src/html/mallmanagement_commodity.html
@@ -19,6 +19,7 @@
 
 
 
+
 </head>
 
 <body>
@@ -49,9 +50,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span>
-                <i class="fa fa-user"></i>admin</span>
-              <span>|</span>
+              <span><i class="fa fa-user"></i>admin</span><span>|</span>
             </li>
             <li>
               <a href="#">
@@ -63,6 +62,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -155,6 +155,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -305,8 +306,9 @@
                       </li>
                     </ul>
                   </div>
-                </div>
+                </div>  
                 <!-- endbuild -->
+
 
 
               </div>
@@ -326,6 +328,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -339,6 +342,7 @@
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
   <script src="../js/mallmanagement.js"></script>
 
 
