--- a/src/html/mallmanagement_exchange.html
+++ b/src/html/mallmanagement_exchange.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
+
   <link rel="stylesheet" href="../css/wj.css">
 
 
@@ -49,9 +50,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span>
-                <i class="fa fa-user"></i>admin</span>
-              <span>|</span>
+              <span><i class="fa fa-user"></i>admin</span><span>|</span>
             </li>
             <li>
               <a href="#">
@@ -63,6 +62,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -155,6 +155,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -307,8 +308,9 @@
                       </li>
                     </ul>
                   </div>
-                </div>
+                </div>  
                 <!-- endbuild -->
+
 
 
               </div>
@@ -328,6 +330,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -341,6 +344,7 @@
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
   <script src="../js/mallmanagement.js"></script>
 
 
