--- a/src/html/mallmanagement_exchange.html
+++ b/src/html/mallmanagement_exchange.html
@@ -13,9 +13,13 @@
   <link rel="stylesheet" href="../js/vendor/animate.css/animate.min.css">
   <link rel="stylesheet" href="../js/vendor/whirl/dist/whirl.css">
   <link rel="stylesheet" href="../css/bootstrap.css" id="bscss">
+  <link rel="stylesheet" href="../js/vendor/datatable-bootstrap/css/dataTables.bootstrap.css">
+  <link rel="stylesheet" href="../js/vendor/sweetalert/dist/sweetalert.css">
+  <link rel="stylesheet" href="../js/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
+
 
   <link rel="stylesheet" href="../css/wj.css">
 
@@ -62,6 +66,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -160,6 +165,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -169,8 +175,8 @@
         <div class="row">
           <div class="col-xs-12">
             <div class="mb-20">
-              <a class="wj-a wj-a-active" href="./mallmanagement_order.html">未兑换</a>
-              <a class="wj-a" href="./mallmanagement_order_has.html">已兑换</a>
+              <a class="wj-a wj-a-active" href="./mallmanagement_exchange.html">未兑换</a>
+              <a class="wj-a" href="./mallmanagement_exchange_has.html">已兑换</a>
             </div>
             <!-- START panel-->
             <div class="panel-default">
@@ -237,7 +243,7 @@
                         <td>500</td>
                         <td>
                           <a class="btn btn-primary jq-send" href="javascript:;">兑换</a>
-                          <a class="btn btn-primary jq-cancel" href="javascript:;">取消</a>
+                          <a class="btn btn-danger jq-cancel" href="javascript:;">取消</a>
                         </td>
                       </tr>
                       <tr>
@@ -255,7 +261,7 @@
                         <td>500</td>
                         <td>
                           <a class="btn btn-primary jq-send" href="javascript:;">兑换</a>
-                          <a class="btn btn-primary jq-cancel" href="javascript:;">取消</a>
+                          <a class="btn btn-danger jq-cancel" href="javascript:;">取消</a>
                         </td>
                       </tr>
                       <tr>
@@ -273,13 +279,13 @@
                         <td>500</td>
                         <td>
                           <a class="btn btn-primary jq-send" href="javascript:;">兑换</a>
-                          <a class="btn btn-primary jq-cancel" href="javascript:;">取消</a>
+                          <a class="btn btn-danger jq-cancel" href="javascript:;">取消</a>
                         </td>
                       </tr>
                     </tbody>
                   </table>
                   <a class="btn btn-primary jq-send" href="javascript:;">批量兑换</a>
-                  <a class="btn btn-primary jq-cancel" href="javascript:;">批量取消</a>
+                  <a class="btn btn-danger jq-cancel" href="javascript:;">批量取消</a>
                 </div>
 
                 <!-- build:pages -->
@@ -313,6 +319,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -331,6 +338,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -342,8 +350,12 @@
   <script src="../js/vendor/jquery.easing/js/jquery.easing.js"></script>
   <script src="../js/vendor/animo.js/animo.js"></script>
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
+  <script src="../js/vendor/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="../js/vendor/moment/min/moment-with-locales.min.js"></script>
+  <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
   <script src="../js/mallmanagement.js"></script>
 
