--- a/src/html/mallmanagement_exchange_has.html
+++ b/src/html/mallmanagement_exchange_has.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>销售数据-余额明细</title>
+  <title>商城管理-学生兑换管理</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
@@ -21,8 +21,7 @@
   <!-- endbuild -->
 
 
-
-
+  <link rel="stylesheet" href="../css/wj.css">
 
 
 </head>
@@ -67,12 +66,6 @@
       </nav>
     </header>
     <!-- endbuild -->
-
-
-
-
-
-
 
 
 
@@ -173,43 +166,31 @@
 
 
 
-
-
-
-
-
-
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          【X月】的余额明细
-          <ol class="breadcrumb">
-            <li><a href="#">销售数据</a></li>
-            <li class="active">余额明细</li>
-          </ol>
+          学生兑换管理
         </div>
         <div class="row">
           <div class="col-xs-12">
+            <div class="mb-20">
+              <a class="wj-a" href="./mallmanagement_exchange.html">未兑换</a>
+              <a class="wj-a wj-a-active" href="./mallmanagement_exchange_has.html">已兑换</a>
+            </div>
             <!-- START panel-->
             <div class="panel-default">
               <div class="panel-heading">
                 <form class="text-right form-lineH">
                   <div class="row">
                     <div class="form-group col-sm-3">
-                      <label class="col-sm-4">选择班级：</label>
+                      <label class="col-sm-4">选择学校：</label>
                       <div class="col-sm-8">
                         <select name="" id="" class="form-control">
                           <option value="">全部</option>
-                          <option value="1">班级1</option>
-                          <option value="2">班级2</option>
+                          <option value="1">学校1</option>
+                          <option value="2">学校2</option>
                         </select>
-                      </div>
-                    </div>
-                    <div class="form-group col-sm-3">
-                      <label class="col-sm-4">学生手机：</label>
-                      <div class="col-sm-8">
-                        <input type="tel" name="" class="form-control">
                       </div>
                     </div>
                     <div class="col-sm-1">
@@ -221,55 +202,41 @@
               <!-- START table-responsive-->
               <div class="panel-heading">
                 <div class="table-responsive">
-                  <table id="" class="table table-bordered table-hover">
+                  <table id="table-ext-1" class="table table-bordered table-hover dataTable">
+                    <col width="15%" />
+                    <col width="15%" />
+                    <col width="20%" />
+                    <col width="20%" />
+                    <col width="10%" />
                     <thead>
-                      <tr>
-                        <th>学生手机</th>
-                        <th>姓名</th>
-                        <th>总学习效率</th>
-                        <th>最后一天学习效率</th>
-                        <th>连续未学</th>
-                        <th>学生总积分</th>
-                        <th>总学习天数</th>
-                        <th>操作</th>
+                        <th>下单时间</th>
+                        <th>完成兑换时间</th>
+                        <th>兑换学员</th>
+                        <th>商品名称</th>
+                        <th>商品价格</th>
                       </tr>
                     </thead>
                     <tbody id="designerlist">
                       <tr>
-                        <td>18000000000</td>
-                        <td>名字名字</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>5天</td>
+                        <td>2018-01-01 22:22:22</td>
+                        <td>2018-01-01 22:22:22</td>
+                        <td>学员名+学员手机</td>
+                        <td>商品名称商品名称</td>
                         <td>500</td>
-                        <td>500</td>
-                        <td>
-                          <a class="btn btn-primary" href="studyreport_all_info.html">查看</a>
-                        </td>
                       </tr>
                       <tr>
-                        <td>18000000000</td>
-                        <td>名字名字</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>5天</td>
+                        <td>2018-01-01 22:22:22</td>
+                        <td>2018-01-01 22:22:22</td>
+                        <td>学员名+学员手机</td>
+                        <td>商品名称商品名称</td>
                         <td>500</td>
-                        <td>500</td>
-                        <td>
-                          <a class="btn btn-primary" href="studyreport_all_info.html">查看</a>
-                        </td>
                       </tr>
                       <tr>
-                        <td>18000000000</td>
-                        <td>名字名字</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>5天</td>
+                        <td>2018-01-01 22:22:22</td>
+                        <td>2018-01-01 22:22:22</td>
+                        <td>学员名+学员手机</td>
+                        <td>商品名称商品名称</td>
                         <td>500</td>
-                        <td>500</td>
-                        <td>
-                          <a class="btn btn-primary" href="studyreport_all_info.html">查看</a>
-                        </td>
                       </tr>
                     </tbody>
                   </table>
@@ -307,11 +274,6 @@
 
 
 
-
-
-
-
-
               </div>
             </div>
           </div>
@@ -325,12 +287,6 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
-
-
-
-
-
-
 
 
 
@@ -355,13 +311,7 @@
   <!-- endbuild -->
 
 
-
-
-
-
-
-
-
+  <script src="../js/mallmanagement.js"></script>
 
 
 
