--- a/src/html/salesdata.html
+++ b/src/html/salesdata.html
@@ -13,9 +13,13 @@
   <link rel="stylesheet" href="../js/vendor/animate.css/animate.min.css">
   <link rel="stylesheet" href="../js/vendor/whirl/dist/whirl.css">
   <link rel="stylesheet" href="../css/bootstrap.css" id="bscss">
+  <link rel="stylesheet" href="../js/vendor/datatable-bootstrap/css/dataTables.bootstrap.css">
+  <link rel="stylesheet" href="../js/vendor/sweetalert/dist/sweetalert.css">
+  <link rel="stylesheet" href="../js/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
+
 
 
 
@@ -64,6 +68,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -164,6 +169,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -305,6 +311,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -330,6 +337,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -341,8 +349,12 @@
   <script src="../js/vendor/jquery.easing/js/jquery.easing.js"></script>
   <script src="../js/vendor/animo.js/animo.js"></script>
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
+  <script src="../js/vendor/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="../js/vendor/moment/min/moment-with-locales.min.js"></script>
+  <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
